--- a/home/wiki/Android/Setup.html
+++ b/home/wiki/Android/Setup.html
@@ -25,36 +25,36 @@
       </div>
       <ul>
         <li class="toclevel-1 tocsection-1">
-          <a href="#Application"><span class="tocnumber">1</span> <span class="toctext">Application</span></a>
+          <a href="#Installing_the_XOWA_Android_App"><span class="tocnumber">1</span> <span class="toctext">Installing the XOWA Android App</span></a>
         </li>
         <li class="toclevel-1 tocsection-2">
-          <a href="#Wikis"><span class="tocnumber">2</span> <span class="toctext">Wikis</span></a> 
+          <a href="#Setting_up_a_wiki:_Simple_Wikipedia"><span class="tocnumber">2</span> <span class="toctext">Setting up a wiki: Simple Wikipedia</span></a> 
           <ul>
             <li class="toclevel-2 tocsection-3">
-              <a href="#Download_the_wiki"><span class="tocnumber">2.1</span> <span class="toctext">Download the wiki</span></a>
+              <a href="#Download_the_html-only_version_on_your_desktop"><span class="tocnumber">2.1</span> <span class="toctext">Download the html-only version on your desktop</span></a>
             </li>
             <li class="toclevel-2 tocsection-4">
-              <a href="#Unzip_the_download"><span class="tocnumber">2.2</span> <span class="toctext">Unzip the download</span></a>
+              <a href="#Download_the_images_on_your_desktop"><span class="tocnumber">2.2</span> <span class="toctext">Download the images on your desktop</span></a>
             </li>
             <li class="toclevel-2 tocsection-5">
-              <a href="#Move_the_files_to_your_SD_card"><span class="tocnumber">2.3</span> <span class="toctext">Move the files to your SD card</span></a>
-            </li>
-            <li class="toclevel-2 tocsection-6">
-              <a href="#Import_the_wiki_in_XOWA"><span class="tocnumber">2.4</span> <span class="toctext">Import the wiki in XOWA</span></a>
+              <a href="#Open_the_wiki_in_XOWA_Android"><span class="tocnumber">2.3</span> <span class="toctext">Open the wiki in XOWA Android</span></a>
             </li>
           </ul>
         </li>
-        <li class="toclevel-1 tocsection-7">
-          <a href="#Open_the_wiki"><span class="tocnumber">3</span> <span class="toctext">Open the wiki</span></a>
+        <li class="toclevel-1 tocsection-6">
+          <a href="#Setting_up_a_wiki:_English_Wikipedia_or_any_other"><span class="tocnumber">3</span> <span class="toctext">Setting up a wiki: English Wikipedia or any other</span></a>
         </li>
-        <li class="toclevel-1 tocsection-8">
-          <a href="#Android_wikis"><span class="tocnumber">4</span> <span class="toctext">Android wikis</span></a>
+        <li class="toclevel-1 tocsection-7">
+          <a href="#Android_wikis_"><span class="tocnumber">4</span> <span class="toctext">Android wikis</span></a>
         </li>
       </ul>
     </div>
     <h2>
-      <span class="mw-headline" id="Application">Application</span>
+      <span class="mw-headline" id="Installing_the_XOWA_Android_App">Installing the XOWA Android App</span>
     </h2>
+    <p>
+      Choose one of the following:
+    </p>
     <ul>
       <li>
         (Android) Open Google Play and search for "XOWA"
@@ -67,80 +67,120 @@
       </li>
     </ul>
     <h2>
-      <span class="mw-headline" id="Wikis">Wikis</span>
+      <span class="mw-headline" id="Setting_up_a_wiki:_Simple_Wikipedia">Setting up a wiki: Simple Wikipedia</span>
     </h2>
+    <p>
+      For a brief test, let's start with Simple Wikipedia.
+    </p>
     <h3>
-      <span class="mw-headline" id="Download_the_wiki">Download the wiki</span>
+      <span class="mw-headline" id="Download_the_html-only_version_on_your_desktop">Download the html-only version on your desktop</span>
     </h3>
     <ul>
       <li>
-        Pick a wiki from the list below <sup id="cite_ref-more_wikis_0-0" class="reference"><a href="#cite_note-more_wikis-0">[1]</a></sup> 
-        <ul>
-          <li>
-            To view text only, download the <code>html</code> links
-          </li>
-          <li>
-            To view images, also download the <code>images</code> links
-          </li>
-        </ul>
+        Download the html-only version. This will not have any images. It's about 500 MB.
       </li>
+    </ul>
+    <dl>
+      <dd>
+        <a href="https://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2016-03-05_html.7z" rel="nofollow" class="external free">https://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2016-03-05_html.7z</a> html
+      </dd>
+    </dl>
+    <ul>
       <li>
-        Not all files are required for the wiki 
-        <ul>
-          <li>
-            Only the files marked <code>core</code> are required
-          </li>
-          <li>
-            Other files may be skipped, but you won't see data in those files
-          </li>
-        </ul>
+        Unzip the 7z file using <a href="http://www.7-zip.org/" rel="nofollow" class="external text">7-zip</a>
+      </li>
+    </ul>
+    <dl>
+      <dd>
+        Assuming you downloaded to the C drive, you should have a folder like <code>C:\xowa\wiki\simple.wikipedia.org</code>. This folder will have these files: 
+        <dl>
+          <dd>
+            C:\xowa\wiki\simple.wikipedia.org\simple.wikipedia.org-text.xowa
+          </dd>
+          <dd>
+            C:\xowa\wiki\simple.wikipedia.org\simple.wikipedia.org-html.xowa
+          </dd>
+          <dd>
+            C:\xowa\wiki\simple.wikipedia.org\simple.wikipedia.org-file.xowa
+          </dd>
+          <dd>
+            C:\xowa\wiki\simple.wikipedia.org\simple.wikipedia.org-file-user.xowa
+          </dd>
+        </dl>
+      </dd>
+    </dl>
+    <ul>
+      <li>
+        Move the files to your microSD card. Assuming your microSD card is attached as the X drive, you will have files like these:
       </li>
     </ul>
     <dl>
       <dd>
         <dl>
           <dd>
-            For example, if you don't download <code>html.category articles</code>, you won't be able to read categories (articles in the [[Category]] namespace)
+            X:\xowa\wiki\simple.wikipedia.org\simple.wikipedia.org-text.xowa
           </dd>
           <dd>
-            For example, if you don't download <code>images.main articles.part-02</code>, you won't have 500,000 random images.
+            X:\xowa\wiki\simple.wikipedia.org\simple.wikipedia.org-html.xowa
+          </dd>
+          <dd>
+            X:\xowa\wiki\simple.wikipedia.org\simple.wikipedia.org-file.xowa
+          </dd>
+          <dd>
+            X:\xowa\wiki\simple.wikipedia.org\simple.wikipedia.org-file-user.xowa
           </dd>
         </dl>
       </dd>
     </dl>
     <h3>
-      <span class="mw-headline" id="Unzip_the_download">Unzip the download</span>
+      <span class="mw-headline" id="Download_the_images_on_your_desktop">Download the images on your desktop</span>
     </h3>
+    <p>
+      If you have time and space, you should also download the images
+    </p>
     <ul>
       <li>
-        Use <a href="http://www.7-zip.org/" rel="nofollow" class="external text">7-zip</a> to unzip the downloads
-      </li>
-    </ul>
-    <h3>
-      <span class="mw-headline" id="Move_the_files_to_your_SD_card">Move the files to your SD card</span>
-    </h3>
-    <ul>
-      <li>
-        The unzip will create a folder like <code>C:\xowa\wiki\en.wikipedia.org</code>
-      </li>
-      <li>
-        Move this folder to your SD card.
+        Download the image file. This file is 2 GB.
       </li>
     </ul>
     <dl>
       <dd>
-        For example, if your SD card is on the X drive, you will be moving them to <code>X:\xowa\wiki\en.wikipedia.org</code>
+        <a href="https://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2016-03-05_file.7z" rel="nofollow" class="external free">https://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2016-03-05_file.7z</a> html
+      </dd>
+    </dl>
+    <ul>
+      <li>
+        Unzip the 7z file
+      </li>
+    </ul>
+    <dl>
+      <dd>
+        Assuming you downloaded to the C drive, you should have a folder like <code>C:\xowa\wiki\simple.wikipedia.org</code>. This folder will have these files: 
+        <dl>
+          <dd>
+            C:\xowa\wiki\simple.wikipedia.org\simple.wikipedia.org-file.xowa
+          </dd>
+          <dd>
+            C:\xowa\wiki\simple.wikipedia.org\simple.wikipedia.org-file-user.xowa
+          </dd>
+        </dl>
       </dd>
       <dd>
-        When done, you will have a file like <code>X:\xowa\wiki\en.wikipedia.org\en.wikipedia.org-core.xowa</code> as well as many others
+        Note that these files have the same names as those in the html download. These files should overwrite the existing files in the html download.
       </dd>
     </dl>
     <h3>
-      <span class="mw-headline" id="Import_the_wiki_in_XOWA">Import the wiki in XOWA</span>
+      <span class="mw-headline" id="Open_the_wiki_in_XOWA_Android">Open the wiki in XOWA Android</span>
     </h3>
     <ul>
       <li>
-        Press <code>the menu button</code> in the top left-hand corner
+        Insert the microSD into your Android device
+      </li>
+      <li>
+        Launch XOWA on your Android device
+      </li>
+      <li>
+        Press the <code>menu button</code> in the top left-hand corner
       </li>
       <li>
         Press the <code>XOWA</code> item
@@ -161,27 +201,89 @@
     </ul>
     <dl>
       <dd>
-        For example, on an LG G4 device, you would navigate to <code>storage</code> -&gt; <code>CARD-CODE</code> -&gt; <code>xowa</code> -&gt; <code>wiki</code> -&gt; <code>en.wikipedia.org</code>
+        For example, on an LG G4 device, you would navigate to <code>storage</code> -&gt; <code>CARD-CODE</code> -&gt; <code>xowa</code> -&gt; <code>wiki</code> -&gt; <code>simple.wikipedia.org</code>
       </dd>
     </dl>
     <ul>
       <li>
-        Press the file with the XOWA icon. In this case it would be <code>en.wikipedia.org-core.xowa</code>
+        Press the file with the XOWA icon. In this case it would be <code>simple.wikipedia.org-text.xowa</code>
+      </li>
+      <li>
+        Press the link for simple.wikipedia.org on the <code>XOWA</code> page. You will be navigated to <code>simple.wikipedia.org/wiki/Main_Page</code>.
       </li>
     </ul>
     <h2>
-      <span class="mw-headline" id="Open_the_wiki">Open the wiki</span>
+      <span class="mw-headline" id="Setting_up_a_wiki:_English_Wikipedia_or_any_other">Setting up a wiki: English Wikipedia or any other</span>
     </h2>
+    <p>
+      The process is the same as Simple Wikipedia, except you will be downloading many more files.
+    </p>
     <ul>
       <li>
-        Press the link for the wiki on the <code>XOWA</code> page
+        For the html-only version, you will be downloading 28 GB. See the <code>html</code> links below for English Wikipedia
       </li>
       <li>
-        You will be navigated to the Main Page. Enjoy!
+        For images, you will be downloading another 82 GB. See the <code>file</code> links below for English Wikipedia
+      </li>
+    </ul>
+    <p>
+      Note that all files are not required. You can download some files and the wiki will still work. For example:
+    </p>
+    <ul>
+      <li>
+        You can download the html-only files. You do not need images in order to use the wiki
+      </li>
+      <li>
+        You can download some of the html databases and skip others
+      </li>
+    </ul>
+    <dl>
+      <dd>
+        For example, if you don't download <code>html.category articles</code>, you won't be able to read categories (articles in the [[Category]] namespace)
+      </dd>
+    </dl>
+    <ul>
+      <li>
+        You can download some of the image databases and skip others
+      </li>
+    </ul>
+    <dl>
+      <dd>
+        For example, if you don't download <code>images.main articles.part-02</code>, you won't have 500,000 random images.
+      </dd>
+    </dl>
+    <p>
+      Finally, the following files are required:
+    </p>
+    <ul>
+      <li>
+        If you're running html-only: 
+        <ul>
+          <li>
+            html.core
+          </li>
+          <li>
+            html.file stubs
+          </li>
+        </ul>
+      </li>
+      <li>
+        If you're running html and images: 
+        <ul>
+          <li>
+            html.core
+          </li>
+          <li>
+            html.file stubs
+          </li>
+          <li>
+            file.core
+          </li>
+        </ul>
       </li>
     </ul>
     <h2>
-      <span class="mw-headline" id="Android_wikis">Android wikis</span>
+      <span class="mw-headline" id="Android_wikis_">Android wikis <sup id="cite_ref-more_wikis_0-0" class="reference"><a href="#cite_note-more_wikis-0">[1]</a></sup></span>
     </h2>
     <table class='wikitable sortable'>
       <tr>
@@ -233,8 +335,8 @@
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            <a href="https://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2016-03-05.7z" rel="nofollow" class="external text">html</a><br>
-            <a href="https://archive.org/download/Xowa_simplewiki_latest/Xowa_simplebundle_2015-04-17.7z" rel="nofollow" class="external text">file</a>
+            <a href="https://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2016-03-05_html.7z" rel="nofollow" class="external text">html</a><br>
+            <a href="https://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2016-03-05_file.7z" rel="nofollow" class="external text">images</a>
           </p>
         </td>
       </tr>
@@ -267,6 +369,7 @@
         <td style='color:black; vertical-align:top;'>
           <p>
             <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2016-03-05_wiki_core.7z" rel="nofollow" class="external text">html.core</a><br>
+             <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2016-03-05_html_file-stubs.7z" rel="nofollow" class="external text">html.file stubs</a><br>
              <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2016-03-05_html_ns-000_part-1.7z" rel="nofollow" class="external text">html.main articles.part-1</a><br>
              <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2016-03-05_html_ns-000_part-2.7z" rel="nofollow" class="external text">html.main articles.part-2</a><br>
              <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2016-03-05_html_ns-000_part-3.7z" rel="nofollow" class="external text">html.main articles.part-3</a><br>
