--- a/home/wiki/Help/Download_XOWA.html
+++ b/home/wiki/Help/Download_XOWA.html
@@ -21,17 +21,17 @@
       All files are available at <a href="https://github.com/gnosygnu/xowa/releases/" rel="nofollow" class="external free">https://github.com/gnosygnu/xowa/releases/</a>
     </p>
     <p>
-      For more info, see <a href="https://gnosygnu.github.io/xowa/blog.html" rel="nofollow" class="external free">https://gnosygnu.github.io/xowa/blog.html</a>
+      For more info, see <a href="http://xowa.org/home/wiki/Blog.html" id="xolnki_2" title="Blog" class="xowa-visited">Blog</a>
     </p>
     <h2>
       <span class="mw-headline" id="Windows">Windows</span>
     </h2>
     <ul>
       <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.4.2.1/xowa_app_windows_64_v3.4.2.1.zip" rel="nofollow" class="external text">Windows (64-bit)</a>
+        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.4.3.1/xowa_app_windows_64_v3.4.3.1.zip" rel="nofollow" class="external text">Windows (64-bit)</a>
       </li>
       <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.4.2.1/xowa_app_windows_v3.4.2.1.zip" rel="nofollow" class="external text">Windows (32-bit)</a>
+        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.4.3.1/xowa_app_windows_v3.4.3.1.zip" rel="nofollow" class="external text">Windows (32-bit)</a>
       </li>
     </ul>
     <h2>
@@ -39,10 +39,10 @@
     </h2>
     <ul>
       <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.4.2.1/xowa_app_linux_64_v3.4.2.1.zip" rel="nofollow" class="external text">Linux (64-bit)</a>
+        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.4.3.1/xowa_app_linux_64_v3.4.3.1.zip" rel="nofollow" class="external text">Linux (64-bit)</a>
       </li>
       <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.4.2.1/xowa_app_linux_v3.4.2.1.zip" rel="nofollow" class="external text">Linux (32-bit)</a>
+        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.4.3.1/xowa_app_linux_v3.4.3.1.zip" rel="nofollow" class="external text">Linux (32-bit)</a>
       </li>
     </ul>
     <h2>
@@ -50,10 +50,10 @@
     </h2>
     <ul>
       <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.4.2.1/xowa_app_macosx_64_v3.4.2.1.zip" rel="nofollow" class="external text">Mac OS X (64-bit)</a>
+        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.4.3.1/xowa_app_macosx_64_v3.4.3.1.zip" rel="nofollow" class="external text">Mac OS X (64-bit)</a>
       </li>
       <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.4.2.1/xowa_app_macosx_v3.4.2.1.zip" rel="nofollow" class="external text">Mac OS X (32-bit)</a>
+        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.4.3.1/xowa_app_macosx_v3.4.3.1.zip" rel="nofollow" class="external text">Mac OS X (32-bit)</a>
       </li>
     </ul>
     <h2>
@@ -61,7 +61,7 @@
     </h2>
     <ul>
       <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.4.2.1/xowa_app_arm_v3.4.2.1.zip" rel="nofollow" class="external text">Raspberry Pi</a>
+        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.4.3.1/xowa_app_arm_v3.4.3.1.zip" rel="nofollow" class="external text">Raspberry Pi</a>
       </li>
     </ul>
     <h2>
@@ -69,7 +69,7 @@
     </h2>
     <ul>
       <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.4.2.1/xowa_app_android_v3.4.2.1.apk" rel="nofollow" class="external text">Android</a>
+        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.4.3.1/xowa_app_android_v3.4.3.1.apk" rel="nofollow" class="external text">Android</a>
       </li>
     </ul>
     <h2>
@@ -77,7 +77,7 @@
     </h2>
     <ul>
       <li>
-        <a href="https://github.com/gnosygnu/xowa/archive/v3.4.2.1.zip" rel="nofollow" class="external text">Source code (Desktop)</a>
+        <a href="https://github.com/gnosygnu/xowa/archive/v3.4.3.1.zip" rel="nofollow" class="external text">Source code (Desktop)</a>
       </li>
     </ul>
     <h2>
@@ -89,7 +89,7 @@
       </li>
     </ul>
     <h2>
-      <span class="mw-headline" id="v3.4.2.1_.282016-04-10.29">v3.4.2.1 (2016-04-10)</span>
+      <span class="mw-headline" id="v3.4.3.1_.282016-04-17.29">v3.4.3.1 (2016-04-17)</span>
     </h2>
     <h3>
       <span class="mw-headline" id="Windows_.2F_Linux_.2F_Mac_OS_X">Windows / Linux / Mac OS X</span>
@@ -99,50 +99,112 @@
     </p>
     <ul>
       <li>
-        Search: Reduce build time for search databases. {detected by William}
-      </li>
-    </ul>
-    <p>
-      <br>
-      <b>major.package</b>
-    </p>
-    <ul>
-      <li>
-        Package: Upload consolidated images for English Wikipedia.
+        Parser: Fix Random pages not showing in Portal. [broken since: v3.3.4.1]
       </li>
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="https://archive.org/details/Xowa_enwiki_latest" rel="nofollow" class="external free">https://archive.org/details/Xowa_enwiki_latest</a>
+        <span style='font-variant:small-caps'>Resolved by</span>: Serialize long for Luaj.
       </dd>
-    </dl>
-    <p>
-      <br>
-      <b>minor.add</b>
-    </p>
-    <ul>
-      <li>
-        CSS: Update home CSS files to latest version from English Wikipedia. {detected by William}
-      </li>
-    </ul>
-    <ul>
-      <li>
-        Parser: Add parser for RandomSelection tag. {requested by anonymous} Example: &lt;choose&gt;&lt;option&gt;A&lt;/option&gt;&lt;option&gt;B&lt;/option&gt;&lt;/choose&gt;.
-      </li>
-    </ul>
-    <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Diagnostics/Xtns/Wikia/All.html" id="xolnki_2" title="Diagnostics/Xtns/Wikia/All" class="xowa-visited">Diagnostics/Xtns/Wikia/All</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wikipedia.org/wiki/Portal:Earth_sciences" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/Portal:Earth_sciences</a>
       </dd>
     </dl>
     <ul>
       <li>
-        Parser: Add parser for Tabber tag. {requested by anonymous} Example: &lt;tabber&gt;tab1=A|-|tab2=B&lt;/tabber&gt;.
+        Html: Fix "Other wikis" not showing in home wiki. [broken since: v3.4.2.1]
       </li>
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Diagnostics/Xtns/Wikia/All.html" id="xolnki_3" title="Diagnostics/Xtns/Wikia/All" class="xowa-visited">Diagnostics/Xtns/Wikia/All</a>
+        <span style='font-variant:small-caps'>Resolved by</span>: Add empty h3 after div logo.
+      </dd>
+    </dl>
+    <ul>
+      <li>
+        Html: Fix {{#DISPLAYTITLE}} not showing. [broken since: v3.1.5.1]
+      </li>
+    </ul>
+    <dl>
+      <dd>
+        <span style='font-variant:small-caps'>Resolved by</span>: Pass display_title info to new page_banner manager.
+      </dd>
+      <dd>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://en.wikipedia.org/wiki/gzip" rel="nofollow" class="external free">http://en.wikipedia.org/wiki/gzip</a> <a href="http://xowa.org/home/wiki/Diagnostics/ParserFunctions/DisplayTitle.html" id="xolnki_3" title="Diagnostics/ParserFunctions/DisplayTitle" class="xowa-visited">Diagnostics/ParserFunctions/DisplayTitle</a>
+      </dd>
+    </dl>
+    <ul>
+      <li>
+        Parser: Fix broken script error "table expected, got nil" on a few dozen de.w pages. Message: <code>Skriptfehler: @C:/xowa/bin/any/xowa/xtns/Scribunto/engines/LuaCommon/lualib/mwInit.lua:18 bad argument: table expected, got nil</code>
+      </li>
+    </ul>
+    <dl>
+      <dd>
+        <span style='font-variant:small-caps'>Resolved by</span>: Change server name to "//de.wikipedia.org" not "https://de.wikipedia.org".
+      </dd>
+      <dd>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://de.wikipedia.org/wiki/Giro_d’Italia_1996" rel="nofollow" class="external free">https://de.wikipedia.org/wiki/Giro_d’Italia_1996</a>
+      </dd>
+    </dl>
+    <p>
+      <b>minor.fix</b>
+    </p>
+    <ul>
+      <li>
+        ParserFunctions: Change {{CANONICALURL}} from http to https. Example: <a href="https://home/wiki/Earth" rel="nofollow" class="external free">https://home/wiki/Earth</a> -&gt; <a href="https://en.wikipedia.org/wiki/Earth" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/Earth</a> x&gt; <a href="http://en.wikipedia.org/wiki/Earth" rel="nofollow" class="external free">http://en.wikipedia.org/wiki/Earth</a>.
+      </li>
+    </ul>
+    <ul>
+      <li>
+        Parser: Fix broken tabs in &lt;tabber&gt; tag.
+      </li>
+    </ul>
+    <dl>
+      <dd>
+        <span style='font-variant:small-caps'>Resolved by</span>: Split only on first =, not on all of them.
+      </dd>
+    </dl>
+    <ul>
+      <li>
+        Parser: Add parser for &lt;TabView&gt;. {requested by anonymous}
+      </li>
+    </ul>
+    <dl>
+      <dd>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Diagnostics/Xtns/Wikia/All.html" id="xolnki_4" title="Diagnostics/Xtns/Wikia/All" class="xowa-visited">Diagnostics/Xtns/Wikia/All</a>
+      </dd>
+    </dl>
+    <ul>
+      <li>
+        Config: Do not keep downloading from Wikimedia Api if wiki was imported in offline mode.
+      </li>
+    </ul>
+    <dl>
+      <dd>
+        <span style='font-variant:small-caps'>Resolved by</span>: Ignore fallback entries in site_cfg.
+      </dd>
+    </dl>
+    <p>
+      <b>doc</b>
+    </p>
+    <ul>
+      <li>
+        Doc: Change domain to http://xowa.org. {assisted by anonymous4}
+      </li>
+    </ul>
+    <dl>
+      <dd>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org" rel="nofollow" class="external free">http://xowa.org</a>
+      </dd>
+    </dl>
+    <ul>
+      <li>
+        Doc: Export all home wiki pages to http://xowa.org.
+      </li>
+    </ul>
+    <dl>
+      <dd>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Help/Contents.html" rel="nofollow" class="external free">http://xowa.org/home/wiki/Help/Contents.html</a>
       </dd>
     </dl>
     <p>
@@ -156,36 +218,37 @@
     </p>
     <ul>
       <li>
-        UI: Add "Import New Wikis" page. {assisted by anonymous4}
+        App: Release XOWA Android to Play Store. {assisted by anonymous4}
+      </li>
+    </ul>
+    <dl>
+      <dd>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://play.google.com/store/apps/details?id=org.xowa" rel="nofollow" class="external free">https://play.google.com/store/apps/details?id=org.xowa</a>
+      </dd>
+    </dl>
+    <ul>
+      <li>
+        App: Support Android KitKat devices. {assisted by anonymous4}
+      </li>
+    </ul>
+    <dl>
+      <dd>
+        <span style='font-variant:small-caps'>Resolved by</span>: Add multidex support.
+      </dd>
+    </dl>
+    <ul>
+      <li>
+        UI: Add icons for different resolutions.
       </li>
     </ul>
     <ul>
       <li>
-        UI: Add "Wikis" list page.
-      </li>
-    </ul>
-    <p>
-      <br>
-      <b>minor.fix</b>
-    </p>
-    <ul>
-      <li>
-        UI: Do not crash when pressing Random in home wiki. {detected by anonymous4}
+        UI: Remove non-XOWA settings from settings screens.
       </li>
     </ul>
     <ul>
       <li>
-        UI: Do not crash when pressing XOWA after History.
-      </li>
-    </ul>
-    <ul>
-      <li>
-        UI: Remove "Nearby" pages.
-      </li>
-    </ul>
-    <ul>
-      <li>
-        UI: Remove "Log in to Wikipedia".
+        UI: Remove "Event logging", "Auto-log crash reports" and other settings.
       </li>
     </ul>
   
