--- a/home/wiki/Main_Page.html
+++ b/home/wiki/Main_Page.html
@@ -23,10 +23,10 @@
         </td>
         <td class="mbox-text" style="">
           <p>
-            <span class="mbox-text-span">The XOWA Android apk is available for download</span>
+            <span class="mbox-text-span">The XOWA Android app is now on Google Play Store.</span>
           </p>
           <p>
-            <span class="mbox-text-span">Please help test! See: <a href="https://github.com/gnosygnu/xowa/wiki/Android" rel="nofollow" class="external free">https://github.com/gnosygnu/xowa/wiki/Android</a></span>
+            <span class="mbox-text-span">Please try it out! See: <a href="https://play.google.com/store/apps/details?id=org.xowa" rel="nofollow" class="external free">https://play.google.com/store/apps/details?id=org.xowa</a></span>
           </p>
         </td>
       </tr>
@@ -82,23 +82,20 @@
       <span class="mw-headline" id="Release_notes">Release notes</span>
     </h2>
     <p>
-      v3.4.2.1 features the following:
+      v3.4.3.1 features the following:
     </p>
     <ul>
       <li>
-        (Desktop) Faster search database build
+        (Android) XOWA Android app on Play Store
       </li>
       <li>
-        (Desktop) New English Wikipedia images update (2016-03)
+        (Android) Kit-Kat support for Android app
       </li>
       <li>
-        (Desktop) Minor Wikia parser tags
+        (Desktop) Minor parser changes and fixes, including missing random sub-pages in Portal, missing Wikis sidebar in home wiki and no {{DisplayTitle}}
       </li>
       <li>
-        (Android) New pages for "Import new wiki" and "XOWA Wikis"
-      </li>
-      <li>
-        (Android) Minor fixes for crashes / obsoleted items
+        (Desktop) New <a href="http://xowa.org" rel="nofollow" class="external free">http://xowa.org</a> domain with entire home wiki
       </li>
     </ul>
     <p>
